Mask Editing: Adding mask curve points (CTRL+LMB) doesn't work around certain points #80064

Closed
opened 2020-08-24 05:44:52 +02:00 by Sacha Goedegebure · 9 comments

System Information
Operating system: Windows-10-10.0.17134-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92

Blender Version
Broken: version: 2.83.5, branch: master, commit date: 2020-08-19 06:07, hash: c2b144df39
Worked: blender-2.81-cfb6ffd48f77-windows64

Short description of error
The action of adding mask curve points with CTRL+LMB doesn't work on specific points on the default square mask and default circle mask.

Exact steps for others to reproduce the error

  • Open attached .blend file (with default square and circle mask).
  • Select any of the indicated mask points.
  • Try to use CTRL+LMB on the masks to add curve points. This won't work around the indicated mask points.

adding_curvepoints_bug.blend

**System Information** Operating system: Windows-10-10.0.17134-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92 **Blender Version** Broken: version: 2.83.5, branch: master, commit date: 2020-08-19 06:07, hash: `c2b144df39` Worked: blender-2.81-cfb6ffd48f77-windows64 **Short description of error** The action of adding mask curve points with CTRL+LMB doesn't work on specific points on the default square mask and default circle mask. **Exact steps for others to reproduce the error** - Open attached .blend file (with default square and circle mask). - Select any of the indicated mask points. - Try to use CTRL+LMB on the masks to add curve points. This won't work around the indicated mask points. [adding_curvepoints_bug.blend](https://archive.blender.org/developer/F8807570/adding_curvepoints_bug.blend)

Added subscriber: @SachaGoedegebure

Added subscriber: @SachaGoedegebure

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Thanks for the report.
In fact it used to work in version 2.81

Thanks for the report. In fact it used to work in version 2.81

Added subscriber: @Sergey

Added subscriber: @Sergey

Problem introduced in 9fac6765c8
This change seems to solve the problem:

diff --git a/source/blender/editors/mask/mask_add.c b/source/blender/editors/mask/mask_add.c
index 3dc6227434e..162264e8cdb 100644
--- a/source/blender/editors/mask/mask_add.c
+++ b/source/blender/editors/mask/mask_add.c
@@ -463,7 +463,7 @@ static int add_vertex_handle_cyclic_at_point(bContext *C,
 
   if (spline->flag & MASK_SPLINE_CYCLIC) {
     /* No cycling toggle needed, we've got nothing meaningful to do in this operator. */
-    return OPERATOR_CANCELLED;
+    return OPERATOR_PASS_THROUGH;
   }
 
   float co_pixel[2];

@Sergey, mind taking a look? (I'm not sure what that commit does).

Problem introduced in 9fac6765c8 This change seems to solve the problem: ``` diff --git a/source/blender/editors/mask/mask_add.c b/source/blender/editors/mask/mask_add.c index 3dc6227434e..162264e8cdb 100644 --- a/source/blender/editors/mask/mask_add.c +++ b/source/blender/editors/mask/mask_add.c @@ -463,7 +463,7 @@ static int add_vertex_handle_cyclic_at_point(bContext *C, if (spline->flag & MASK_SPLINE_CYCLIC) { /* No cycling toggle needed, we've got nothing meaningful to do in this operator. */ - return OPERATOR_CANCELLED; + return OPERATOR_PASS_THROUGH; } float co_pixel[2]; ``` @Sergey, mind taking a look? (I'm not sure what that commit does).

Update the comment above the changed line to something like:

The spline is already cyclic, so there is no need to handle anything here.
Return PASS_THROUGH so that it's possible to add vertices close to the endpoints of the cyclic spline.

and the fix will be complete.

Update the comment above the changed line to something like: ``` The spline is already cyclic, so there is no need to handle anything here. Return PASS_THROUGH so that it's possible to add vertices close to the endpoints of the cyclic spline. ``` and the fix will be complete.

This issue was referenced by 5086bdfe0b

This issue was referenced by 5086bdfe0bb69c8841b81f5f867acd5626038622

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-08-28 16:50:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80064
No description provided.