Fix T80064: Adding mask curve points doesn't work around endpoints